[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "parallel-downloader"
description = "A tkinter GUI for downloading one or more files in parallel."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "thegamecracks" }]
license = { text = "MIT" }
classifiers = []
dynamic = ["version"]
dependencies = [
    "httpx>=0.27.0",  # maybe pin this?
]

[project.gui-scripts]
pdl = "pdl:main"

[project.optional-dependencies]
tests = [
    "pytest>=7.4.3",
]

[tool.setuptools_scm]

[project.urls]
"Homepage" = "https://github.com/thegamecracks/parallel-downloader"
"Issue Tracker" = "https://github.com/thegamecracks/parallel-downloader/issues"
